css/guess.css
@import url('https://fonts.googleapis.com/css2?family=Lato:wght@300;400;700;900&display=swap');
@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300;500;700&display=swap');
@import "reset.css";
@import "header-nav.css";

#game-section{
  background: lightgreen;
  padding: 50px 0px;
  height: 100%;
}

#game-section .container{
  padding: 40px;
  /* border: 1px solid black; */
  border-radius: 10px;
}

#game-section .container .rules{
  align-self: flex-start;
}

#game-section .container ul.rules{
  margin-left: 50px;
  line-height: 1.4;
}

#game-section h1{
  font-size: 2.4rem;
  font-weight: 700;
  margin-bottom: 30px;
}

#game-section h2, #game-section h3{
  font-size: 2rem;
  font-weight: 500;
  margin-bottom: 20px;
}

/* #game-section .guess-title{
  /* align-self: start; 
  text-align: center;
} */

/* #game-section .container .row{
  margin-bottom: 50px;
} */

#game-section .container .row1{
  height: 220px;
  width: 100%;
}

#game-section .container .row1 .col-6:nth-child(2){
  color: white;
}

#game-section .container .row1 .guess-title{
  width: 100%;
}

#game-section .container .row1 .col-6 .guess-text{
  font-size: 1.5rem;
  line-height: 1.4;
}

#game-section .container .row1,
#game-section .container .row2,
#game-section .container .row3,
#game-section .container .row4{
  display: none;
}

#game-section .container .row:nth-of-type(2),
#game-section .container .row:nth-of-type(4){
  width: 100%;
}

#game-section .container .row:nth-of-type(4) .score{
  margin-right: 15px;
}

#game-section .container .row:nth-of-type(4) .score-number{
  font-size: 2rem;
}

/* #game-section .container .guess-text{
  padding: 10px 0px;

} */

#game-section .container .clue1, #game-section .container .clue2{
  /* display: none; */
  visibility: hidden;
  margin-bottom: 25px;
  line-height: 1.4;
}

#game-section .chances{
  text-align: left;
}

#game-section .container .row3 .col-6 button{
  margin-right: 20px;
}

#game-section .container h2 .user-answer{
  display: block;
  /* height: 85px; */
}

/* #game-section .container .row2 .col-6 h2{ MAYBE UNCOMMENT THIS FOR ANOTHER WAY OF VISUAL IN THE MESSAGES
  height: 100px;
} */

#game-section input{
  margin-bottom: 20px;
}

#game-section p{
  font-size: 1.2rem;
  margin-bottom: 15px;
}

#game-section .row3 .col-3:nth-child(1){
  /* visibility: hidden; */
  text-align: right;
}

#game-section .row3 .col-3:nth-child(2){
  display: flex;
  justify-content: flex-end;
}

#game-section .row3{
  width: 100%;
}

#game-section .row3 .col-3 .answer-input{
  padding: .450rem .75rem;
  border-radius: 4px;
  /* height: fit-content; */
}

#game-section .row4 .col-7{
  text-align-last: center;
}

#game-section .row4 .col-7 button{
  margin-right: 30px;
}

#game-section .row4 .col-7 .next-guess{
  margin-left: 71px;
}

#game-section .row4 .col-7 .finish,
#game-section .row4 .col-7 .you-lose{
  visibility: hidden;
}

#game-section .row5{
  width: 100%;
  margin-top: 20px;
}

#game-section .row5 h2, #game-section .row5 .player-name{
  margin: 0px;
}

#game-section .row5 h2{
  margin-right: 20px;
}

#game-section .row5 .player-name{
  margin-right: 80px;
}

#game-section #exampleModal2 .modal-header h1{
  margin-bottom: 0px;
}

#game-section #exampleModal2 .modal-header .close{
  margin-left: 0px;
}

#game-section #exampleModal2 .modal-body h2{
  margin-bottom: 0px;
  line-height: 1.3;
  font-size: 1.9rem;
}

#game-section #exampleModal2 .modal-content .modal-footer,
#game-section #exampleModal .modal-content .modal-footer{
  justify-content: space-between;
}

/* paletas de colores */
/* PALETA 1 */
#game-section{
  background: #E4BE9E;
}

#game-section h1,#game-section h2,#game-section h3{
  color: white;
}

#game-section .container{
  background: #6D2E46;
}

#game-section .row1 .col-6 .guess-text{
  color: white;
}

#game-section .score-number{
  color: white;
}

/* PALETA 2 */

#game-section{
  background: #ACEDFF;
}
#game-section .container{
  background: #E4BE9E;
}
#game-section h1,#game-section h2,#game-section h3,
#game-section .row1 .col-6 .guess-text,
#game-section .score-number,
#game-section .row1 .col-6 .clue1,
#game-section .row1 .col-6 .clue2{
  color: #04151F;
}

/* PALETA 3 */

#game-section{
  background: #74776B;
}
#game-section .container{
  background: #DFF8EB; /* EFF1C5 */
}
#game-section h1,#game-section h2,#game-section h3,
#game-section .row1 .col-6 .guess-text,
#game-section .score-number,
#game-section .row1 .col-6 .clue1,
#game-section .row1 .col-6 .clue2{
  color: #000;
}

/* PALETA 4 */

#game-section{
  background: #DD9787;/*FED0BB*/
}
#game-section .container{
  background: #0F084B;
}
#game-section h1,#game-section h2,#game-section h3,
#game-section .row1 .col-6 .guess-text,
#game-section .score-number,
#game-section .row1 .col-6 .clue1,
#game-section .row1 .col-6 .clue2{
  color: #EAF2EF;
}


/* PALETA 5 */

#game-section{
  background: #47A8BD;/*FED0BB*/
}
#game-section .container{
  background: #1E3888;
}
#game-section h1,#game-section h2,#game-section h3,
#game-section .row1 .col-6 .guess-text,
#game-section .score-number,
#game-section .row1 .col-6 .clue1,
#game-section .row1 .col-6 .clue2{
  color: #EAF2EF;
}

/* PALETA 6 */

#game-section.palette6{
  background: #01BAEF;
}
#game-section .container.palette6{
  background: #040F16;
}
#game-section h1.pallete6,
#game-section h2.palette6,
#game-section h3.palette6,
#game-section .row1  .guess-text.palette6,
#game-section .score-number.palette6, .score.palette6,
#game-section .row1  .clue1.palette6,
#game-section .row1  .clue2.palette6,
.guess_title.palette6, .user-answer-generic.palette6, .user-answer.palette6,
 .chances.palette6, .chances-left.palette6, #game-section div h1.main-guess-title.palette6
{
  color: #FBFBFF;/*B80C09*/
}


/* PALETA 7 */

#game-section{
  background: #12355B;
  /* background-image: url("https://i.pinimg.com/originals/ab/eb/22/abeb228248191ef7f0e5d4dd971527f4.jpg");
  background-position: center;
  background-size: cover; */
}
#game-section .container{
  background: #DCFFFD;
  /* background: rgba(255, 255, 255, 0); */
  /* backdrop-filter: blur(3px);  
  -webkit-backdrop-filter: blur(3px); */
}
#game-section .main-guess-title,#game-section h2,#game-section h3,
#game-section .row1  .guess-text,
#game-section .score-number,
#game-section .row1  .clue1,
#game-section .row1  .clue2{
  color: #000;/*B80C09*/
}


/* reloj dali */

#game-section.reloj-dali{
  background-image: url("../img/reloj-dali.jpg");
  background-position: center;
  background-size: cover;
  background-repeat: no-repeat;
}
#game-section .container.reloj-dali{
  background: rgba(255, 255, 255, 0);
  backdrop-filter: brightness(15%);  
  /* -webkit-backdrop-filter: opacity(15%); */
}

/* sand clock */

#game-section.sand-clock{
  background-image: url("https://images.unsplash.com/photo-1501139083538-0139583c060f?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&w=1000&q=80");
  background-position: center;
  background-size: cover;
  background-repeat: no-repeat;
}
#game-section .container.sand-clock{
  background: rgba(255, 255, 255, 0);
  backdrop-filter: brightness(15%);  
  /* -webkit-backdrop-filter: opacity(15%); */
}

/* Vinland

#game-section.vinland{
  background-image: url("https://newslagoon.com/wp-content/uploads/2020/07/Vinland-Saga-Season-2-with-Thorfinn-taking-REVENGE-for-his.jpg");
  background-position: center;
  background-size: cover;
  background-repeat: no-repeat;
}
#game-section .container.vinland{
  background: rgba(255, 255, 255, 0);
  backdrop-filter: opacity(15%);  
  -webkit-backdrop-filter: opacity(15%);
} */

/* Berserk */

#game-section.berserk{
  background-image: url("https://i.pinimg.com/originals/ab/eb/22/abeb228248191ef7f0e5d4dd971527f4.jpg");
  background-position: center;
  background-size: cover;
  background-repeat: no-repeat;
}
#game-section .container.berserk{
  background: rgba(255, 255, 255, 0);
  backdrop-filter: brightness(15%);  
  /* backdrop-filter: opacity(15%);  
  -webkit-backdrop-filter: opacity(15%); */
}

/* Vinland */

#game-section.vinland{
  background-image: url("https://newslagoon.com/wp-content/uploads/2020/07/Vinland-Saga-Season-2-with-Thorfinn-taking-REVENGE-for-his.jpg");
  background-position: center;
  background-size: cover;
  background-repeat: no-repeat;
}
#game-section .container.vinland{
  background: rgba(255, 255, 255, 0);
  backdrop-filter: brightness(15%);  
  /* backdrop-filter: opacity(15%);  
  -webkit-backdrop-filter: opacity(15%); */
}


/* Evangelion */

#game-section.evangelion{
  background-image: url("../img/all-evas.jpg");
  background-position: center;
  background-size: cover;
  background-repeat: no-repeat;
}
#game-section .container.evangelion{
  background: rgba(255, 255, 255, 0);
  backdrop-filter: brightness(15%);  

  /* backdrop-filter: opacity(15%);  
  -webkit-backdrop-filter: opacity(15%); */
}


/* ************************************** */
*{
  box-sizing: border-box;
  scroll-behavior: smooth;
}

header .mobile-nav{
  display: none;
  width: 100%;
}

@media (max-width: 767px){
  header .main-nav,header .logo{
    display: none;
  }
  header{
    height: auto;
  }
  header .mobile-nav{
    display: block;
    width: 100%;
  }

  header .mobile-nav .logo{
    display: flex;
    position: absolute;
    top: -12px;
    left: 0px;
  }

  header .mobile-nav button{
    float: right;
  }

  header .mobile-nav .show{
    margin-top: 35px;
  }
  header .mobile-nav .nav-item a{
    display: inline-block;
    width: 100%;
  }

  #form h1{
    font-size: 2rem;
    margin-bottom: 25px;
  }
  #game-section .container .row1{
    margin-bottom: 100px;
  }
  #game-section .container .row2{
    margin-bottom: 30px;
  }
  #game-section .container .row3 button{
    margin-bottom: 10px;
  }
  #game-section .container .row4 button{
    margin-bottom: 10px;
    margin-right: 10px;
  }
}
/* body{
  overflow: hidden;
} */

